<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".register"
    android:orientation="vertical"
    android:background="#fff">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp"
        android:background="#fff"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_form_title"
                android:textSize="36sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/register_form_username" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/register_usernameEditText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/register_form_password" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/register_passwordEditText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/register_form_dob" />

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:textStyle="bold"-->
<!--                android:gravity="center"-->
<!--                android:text = "JAN 01 2020"-->
<!--                android:textSize="25sp"/>-->

<!--            <Button-->
<!--                android:id="@+id/datePickerButton"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="JAN 01 2020"-->
<!--                android:textSize="25sp"-->
<!--                android:textStyle="bold"-->
<!--                android:textColor="@color/black"-->
<!--                style="?android:spinnerStyle"-->
<!--                app:layout_constraintLeft_toLeftOf="parent"-->
<!--                app:layout_constraintRight_toRightOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/textView"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:onClick="openDatePicker"/>-->

            <DatePicker
                android:id="@+id/datePicker1"
                android:layout_width="wrap_content"
                android:layout_height="135dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

<!--            https://www.tutlane.com/tutorial/android/android-datepicker-with-examples -->

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="23dp"
                android:layout_height="32dp"
                android:visibility="gone" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/register_signButton"
                android:text="@string/register_form_sign"
                android:textSize="22sp"/>

<!--            <TextView-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="22sp"-->
<!--                android:gravity="center"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:id="@+id/backLogin"-->
<!--                android:text="click_to_login"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"/>-->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_loginButton"
                android:text="@string/register_back_to_login"
                android:textSize="22sp"/>

        </LinearLayout>



</LinearLayout>